--- a/index.html
+++ b/index.html
@@ -123,4 +123,20 @@
 
     
 </body>
+
+<footer>
+    <ul class="social_icon">
+        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+    </ul>
+    <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Membership</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact Us</a></li>
+    </ul>
+    <p>@2023 Commonwealth Coders Spring</p>
+</footer>
+
 </html>
